// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightGroup should go into edit mode on click 1`] = `
<div
  className="deviceGroup_3hmsj"
>
  <div
    className="form_1nx6cxj"
  >
    <input
      defaultValue="Test Group"
    />
    <div
      className="button_1f1tgwh-o_O-button_1pn6zm0"
      onClick={[Function]}
    >
      OK
    </div>
  </div>
  <div
    className="deviceGroupBody_jro6t0"
  >
    <Connect(Light)
      id={65537}
      key="Decke"
    />
  </div>
</div>
`;

exports[`LightGroup should render correctly 1`] = `
<div
  className="deviceGroup_3hmsj"
>
  <h3
    className="name_14nkgf3"
    onClick={[Function]}
  >
    Test Group
  </h3>
  <div
    className="deviceGroupBody_jro6t0"
  >
    <Connect(Light)
      id={65537}
      key="Decke"
    />
  </div>
</div>
`;
